[package]
authors = ["Marvin Countryman <me@maar.vin>"]
description = "An unofficial client for Auth0 Management API."
edition = "2018"
name = "auth0-management"
version = "0.0.5"

categories = [
  "api-bindings",
  "asynchronous",
  "authentication",
]
documentation = "https://docs.rs/auth0-management"
keywords = ["auth0", "reqwest", "management", "api"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/mcountryman/auth0-management"

[dependencies]
async-mutex = "1.4"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
reqwest = {version = "0.11.10", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[dev-dependencies]
tokio = {version = "1.17.0", features = ["macros"]}
